--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
 header{
 	background: #ffffff;
 } 
+div.test{
+	color: # 000000;
+	font-size: 12pt;
+	background-color: #ffffff;
+	border-radius: 5px;
+}
